--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
             <p class="profile__about-text">Я родился и вырос в Саратове, поступил на бюджет в ИТМО, один из лучших IT вузов России.
                 С 2021 года принимаю активные действия в решении общественных проблем
                 жителей города Санкт-Петербург</p>
-            <img class="profile__top" src="images/K top.png" alt="Кирилл Яшин">
+            <div class="profile__top"></div>
             <img class="profile__gradient" src="images/gradient.png" alt="Градиент">
         </section>
         
         <section class="fund">
-            <img class="fund__background" src="images/K 25_04_2022-39 1.png" alt="Кирилл Яшин">
+            <div class="fund__background-1"></div>
             <h2 class="fund__title">Фонд будущие лидеры</h2>
             <p class="fund__text">В 2018 году я стал победителем отбора и участником фонда «Будущие лидеры»</p>
             <img class="fund__vr" src="images/Line 2.png" alt="Линия">
         </section>
         
         <section class="fund">
-            <img class="fund__background" src="images/K 25_04_2022-83 1.png" alt="Кирилл Яшин">
+            <div class="fund__background-2"></div>
             <h2 class="fund__title">Мастерская Новых медиа</h2>
             <p class="fund__text">В 2022 году прошёл отбор в «Мастерскую Новых Медиа» от платформы «Россия - страна возможностей», созданной по инициативе Президента России. В настоящий момент прохожу там обучение</p>
         </section>
@@ -40,26 +40,42 @@
         <section class="source">
             <h2 class="source__title">ищи меня здесь</h2>
             <div class="source__flex">
-                <div class="source__flex-cell">
-                    <img src="images/Telegram.svg" alt="Иконка Телеграма" class="source__cell-icon">
-                    <p class="source__cell-text">личный телеграм</p>
-                </div>
-                <div class="source__flex-cell">
-                    <img src="images/Telegram.svg" alt="Иконка Телеграма" class="source__cell-icon">
-                    <p class="source__cell-text">семейный телеграм</p>
-                </div>
-                <div class="source__flex-cell">
-                    <img src="images/Telegram.svg" alt="Иконка Телеграма" class="source__cell-icon">
-                    <p class="source__cell-text">вк</p>
-                </div>
-                <div class="source__flex-cell">
-                    <img src="images/Telegram.svg" alt="Иконка Телеграма" class="source__cell-icon">
-                    <p class="source__cell-text">тик-ток</p>
-                </div>
-                <div class="source__flex-cell">
-                    <img src="images/Telegram.svg" alt="Иконка Телеграма" class="source__cell-icon">
-                    <p class="source__cell-text">инстаграмм</p>
-                </div>
+                <a href="https://vk.com/kirya_yashin">
+                    <div class="source__flex-cell">
+                        <img src="images/Vk.svg" alt="Иконка Вконтакте" class="source__cell-icon">
+                        <p class="source__cell-text">вк</p>
+                    </div>
+                </a>
+                <a href="https://instagram.com/kirya_yashin">
+                    <div class="source__flex-cell">
+                        <img src="images/Instagram.svg" alt="Иконка Инстаграма" class="source__cell-icon">
+                        <p class="source__cell-text">инстаграм</p>
+                    </div>
+                </a>
+                <a href="https://www.tiktok.com/@kirya_yashin">
+                    <div class="source__flex-cell">
+                        <img src="images/tiktok_1.svg" alt="Иконка Тик-Тока" class="source__cell-icon">
+                        <p class="source__cell-text">тик-ток</p>
+                    </div>
+                </a>
+                <a href="mailto:kirill-yashin@inbox.ru">
+                    <div class="source__flex-cell">
+                        <img src="images/Envelope.svg" alt="Иконка Почты" class="source__cell-icon">
+                        <p class="source__cell-text">почта</p>
+                    </div>
+                </a>
+                <a href="https://t.me/kirya_yashinofficial">
+                    <div class="source__flex-cell">
+                        <img src="images/Telegram.svg" alt="Иконка Телеграма" class="source__cell-icon">
+                        <p class="source__cell-text">личный телеграм</p>
+                    </div>
+                </a>
+                <a href="https://t.me/YASHINVIP">
+                    <div class="source__flex-cell">
+                        <img src="images/Telegram.svg" alt="Иконка Телеграма" class="source__cell-icon">
+                        <p class="source__cell-text">семейный телеграм</p>
+                    </div>
+                </a>
             </div>
             <q class="source__quote">Если ты хочешь преуспеть в каком-то деле, найди наставника, который уже в этом деле достиг внушительного результата. Если у тебя горит огонь в глазах и ты готов(а) работать на все 150%, то я готов им стать для тебя</q>
             <p class="source__name">Кирилл</p>
