--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1"> 
         <title>Кирилл Яшин</title>
+        <link rel="icon" href="images/Frame_1_1.svg" type="image/svg+xm">
         <link rel="stylesheet" href="pages/index.css">
     </head>
     <body class="page">
